--- a/app/src/main/res/layout/activity_news_list.xml
+++ b/app/src/main/res/layout/activity_news_list.xml
@@ -12,7 +12,7 @@
 
     <include
         layout="@layout/dialog_loading"
-        android:layout_width="@dimen/dialog_loading_width"
-        android:layout_height="@dimen/dialog_loading_height"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_centerInParent="true"/>
 </RelativeLayout>
