--- a/app/src/main/res/layout/dialog_loading.xml
+++ b/app/src/main/res/layout/dialog_loading.xml
@@ -1,14 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
+    android:id="@+id/dialog_loading_layout"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="@dimen/dialog_loading_width"
     android:layout_height="@dimen/dialog_loading_height"
-    android:background="@drawable/bg_semi_transparent_dialog">
+    android:background="@drawable/bg_semi_transparent_dialog"
+    android:visibility="invisible">
 
-    <include
-        layout="@layout/loading_layout"
+    <ImageView
+        android:id="@+id/dialog_loading_image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"/>
+        android:layout_centerInParent="true"
+        android:src="@drawable/loading"
+        android:visibility="invisible"/>
 
 </RelativeLayout>
